--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -37,7 +37,7 @@
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:text="!"
-            android:id="@+id/textView2" />
+            android:id="@+id/colorText" />
     </LinearLayout>
 
 </LinearLayout>
