--- a/app/src/main/res/layout/new_scrim_area.xml
+++ b/app/src/main/res/layout/new_scrim_area.xml
@@ -62,7 +62,7 @@
          />
 
     <Spinner
-        android:layout_width="70dp"
+        android:layout_width="100dp"
         android:layout_height="40dp"
         android:id="@+id/colorSpinner"
         android:layout_marginLeft="10dp"
@@ -71,11 +71,11 @@
 
 
     <ImageView
-        android:layout_width="35dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
         android:id="@+id/colorImage"
-        android:layout_below="@id/colorText"
-        android:layout_toRightOf="@id/colorSpinner"
+        android:layout_below="@id/colorSpinner"
+        android:layout_marginLeft="30dp"
         />
 
     <TextView
