--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="75dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@android:drawable/sym_def_app_icon"
-        android:contentDescription="@string/profileIcon" />
+        android:contentDescription="@string/profile_icon" />
 
     <LinearLayout
         android:orientation="horizontal"
