--- a/app/src/main/res/layout/marker_info.xml
+++ b/app/src/main/res/layout/marker_info.xml
@@ -11,23 +11,31 @@
         android:id="@+id/typeImage"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="New Text"
+        android:id="@+id/titleText"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/typeImage"
+        android:layout_alignTop="@id/typeImage"  />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Football"
         android:id="@+id/typeText"
         android:layout_toRightOf="@id/typeImage"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:layout_alignTop="@id/typeImage"/>
-
+        android:layout_below="@id/titleText"
+       />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2/19 6:00P.M"
         android:id="@+id/dateText"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/typeText"
         android:layout_toRightOf="@+id/typeImage"
