--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -8,7 +8,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
         android:layout_gravity="left|top"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:src="@drawable/popup_celebs"
+         />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -44,10 +45,5 @@
         android:id="@+id/imageView7"
         android:layout_gravity="right|center_vertical"
         android:src="@android:drawable/sym_def_app_icon" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left|top"></RelativeLayout>
 
 </FrameLayout>
