Implement members/pendingInvites page. Stubbed out data for pending invitations and members of group

--- a/app/src/main/res/layout/marker_info.xml
+++ b/app/src/main/res/layout/marker_info.xml
@@ -21,7 +21,7 @@
         <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/groupButton"
+            android:id="@+id/membersAndInvitesButton"
             android:background="@drawable/members"/>
     </RelativeLayout>
 
