--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,76 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.chris.scrim.LoginActivity">
+    android:background="@color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/loginUsernameText"
-        android:id="@+id/textView3"
-        android:layout_marginTop="27dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:focusableInTouchMode="true"
+        android:paddingBottom="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="20dp" >
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/userEdit"
-        android:layout_alignParentEnd="false"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vitalize_logo"
+            android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:id="@+id/textView4"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:textColor="@color/colorPrimary"
-        android:layout_below="@+id/userEdit"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:id="@+id/username"
+            style="@style/editext_graybg"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:drawableLeft="@drawable/ic_username"
+            android:hint="@string/email" >
+        </EditText>
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passEdit"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:id="@+id/password"
+            style="@style/editext_graybg"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+            android:drawableLeft="@drawable/ic_pwd"
+            android:hint="@string/password"
+            android:inputType="textPassword" >
+        </EditText>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@android:drawable/sym_def_app_icon"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        <LinearLayout
+            android:id="@+id/main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/LoginBtn"
-        android:layout_below="@+id/passEdit"
-        android:layout_centerHorizontal="true" />
+            <Button
+                android:id="@+id/btnLogin"
+                style="@style/btn_white_large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/login" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:id="@+id/loginRegBtn"
-        android:layout_below="@+id/LoginBtn"
-        android:layout_centerHorizontal="true" />
+            <Button
+                android:id="@+id/btnReg"
+                style="@style/btn_white_large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/register"
+                android:layout_marginLeft="10dp"/>
+        </LinearLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
