--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             style="@style/editext_graybg"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:drawableLeft="@drawable/ic_username"
+            android:drawableLeft="@drawable/username_left_icon"
             android:hint="@string/email" >
         </EditText>
 
@@ -38,7 +38,7 @@
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="5dp"
-            android:drawableLeft="@drawable/ic_pwd"
+            android:drawableLeft="@drawable/pwd_left_icon"
             android:hint="@string/password"
             android:inputType="textPassword" >
         </EditText>
