--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,9 @@
         <item
             android:id="@+id/about"
             android:title="About" />
+        <item
+            android:id="@+id/logout"
+            android:title="Log Out"/>
     </group>
 
 </menu>
