--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,9 +8,12 @@
         <item
             android:id="@+id/profile"
             android:title="Profile" />
-        <item
-            android:id="@+id/settings"
-            android:title="Settings" />
+        <!--<item-->
+            <!--android:id="@+id/settings"-->
+            <!--android:title="Settings" />-->
+        <!--<item-->
+            <!--android:id="@+id/subscription"-->
+            <!--android:title="Subscription" />-->
         <item
             android:id="@+id/about"
             android:title="About" />
