Favorite filter icon(Richard, Jana)

--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -32,6 +32,14 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="My Favorite"
+            android:id="@+id/myFavorite"
+            android:layout_gravity="center_horizontal"
+            android:checked="false" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Basketball"
             android:id="@+id/bballCheckBox"
             android:layout_gravity="center_horizontal"
