--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,4 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.ryde.chris.scrim.MapsActivity" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:src="@drawable/water_filer_key"
+        android:baselineAlignBottom="true"/>
 </android.support.design.widget.CoordinatorLayout>
